# corpus-generator

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/iramuteq_preprocessor/: main.py
