[project]
name = "corpus-generator"
version = "0.1.0"
description = "generates corpus using iramuteq specs"
authors = [
    {name = "Fernanda Garcia Vilela",email = "fegvilela@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "unidecode (>=1.4.0,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pdfminer-six (>=20250506,<20250507)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
