[project]
name = "iramuteq-preprocessor"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernanda Garcia Vilela",email = "fegvilela@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "unidecode (>=1.4.0,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pdfminer-six (>=20250506,<20250507)",
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "iramuteq_preprocessor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
